--- a/example/simple/config.yml
+++ b/example/simple/config.yml
@@ -1,18 +1,19 @@
 hosts:
   - localhost:8091
 username: user
-password: password
+password: 123456
 bucketName: dcp-test
+logging:
+  level: info
 dcp:
   group:
     name: groupName
     membership:
       type: static
-metadata:
-  type: couchbase
-  config:
-    bucket: checkpoint-bucket-name
-    scope: _default
-    collection: _default
 sql:
-# TODO
+  host: localhost
+  user: user
+  password: password
+  dbName: example
+  port: 5432
+  driverName: postgres
