--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Integration
+name: Build
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [master]
 
 jobs:
-  integration:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -20,12 +20,16 @@ jobs:
         with:
           go-version: '1.20'
 
-      - uses: actions/checkout@v3
-      - name: Start containers
-        run: make compose
+      - name: Lint
+        run: |
+          make init
+          make lint
 
-      - name: Integration Test
-        run: go test -v test/integration/integration_test.go
-        env:
-          INPUT_PUBLISH: false
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install dependencies
+        run: go get .
+
+      - name: Build
+        run: go build -v ./...
+
+      - name: Test
+        run: go test -v ./...
