--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,12 @@
-name: Integration
+name: Release
 
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+    tags:
+      - '*'
 
 jobs:
-  integration:
+  release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -20,12 +19,10 @@ jobs:
         with:
           go-version: '1.20'
 
-      - uses: actions/checkout@v3
-      - name: Start containers
-        run: make compose
-
-      - name: Integration Test
-        run: go test -v test/integration/integration_test.go
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          version: latest
+          args: release --clean
         env:
-          INPUT_PUBLISH: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
